# aiidalab-mlip

./: .gitignore  README.md  setup.cfg
.github/: MILESTONES_AND_ISSUES.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  deployment_plan.yml  feature_request.yml  release_checklist.yml
src/aiidalab_mlip/: prediction.py  process.py  results.py  structure.py  training.py
